--- a/dashboards/other.erb
+++ b/dashboards/other.erb
@@ -24,6 +24,10 @@ file = File.read('data/other.json')
         <a class="help-icon" href="#challenges"></a>
         <div data-id="challenges" data-view="Number" data-title="Coding challenges" class="grey"></div>
       </div>
+      <div class="col-sm-3">
+        <a class="help-icon" href="#rss"></a>
+        <div data-id="rss" data-view="Number" data-title="RSS" class="grey"></div>
+      </div>
     </div>
     <%= erb(:help, :layout => false) %>
   </div>
