--- a/dashboards/tasks.erb
+++ b/dashboards/tasks.erb
@@ -20,7 +20,7 @@ file = File.read('data/tasks.json')
       </div>
       <div class="col-sm-3">
         <a class="help-icon" href="#blog"></a>
-        <div data-id="blog" data-view="TimeSinceLast" data-title="Blog" class="grey"></div>
+        <div data-id="blog" data-view="TimeSinceLast" data-title="Blog/Photos" class="grey"></div>
       </div>
     </div>
     <div class="row">
