--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -746,7 +746,7 @@ a:hover { color: #6c2eb2; }
 }
 
 .color-2 {
-  background-color: #9932CC;
+  background-color: #aa43dd;
 }
 
 .grey {
@@ -754,5 +754,9 @@ a:hover { color: #6c2eb2; }
 }
 
 .color-3 {
-  background-color: #0B46CF;
+  background-color: #326df4;
+}
+
+.hidden {
+  display: none;
 }
